[package]
name = "http"
version = "0.1.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]

[dependencies]
futuremio = { path = "../mio" }
futures = { path = ".." }
httparse = "1.1"
time = "0.1"
env_logger = "0.3"
log = "0.3"
net2 = "0.2"
serde_json = "0.7"
serde = "0.7"
rustc-serialize = "0.3"
postgres = "0.11"
rand = "0.3"
r2d2_postgres = "0.10"
r2d2 = "0.7"
crossbeam = "0.2"

[profile.release]
debug = true

[replace]
"time:0.1.35" = { git = "https://github.com/rust-lang-deprecated/time" }
